<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>e4_msgs</name>
  <version>0.0.1</version>
  <description>ROS2 Messages for E4 wristband.</description>
  <author email="manolofc@gmail.com">Manuel Fernandez Carmona</author>
  <maintainer email="manolofc@gmail.com">Manuel Fernandez Carmona</maintainer>

  <license>Creative Commons</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
